Added get all and get by id

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <p><b>CARLOS DUVAN LABRADO H</b></p>
+    <p><b>CARLOS DUVAN LABRADOR HERNANDEZ</b></p>
     <p><b>© {{ anio }}</b></p>
 </footer>
   
