--- a/src/app/modules/employees/pages/detail/detail.component.html
+++ b/src/app/modules/employees/pages/detail/detail.component.html
@@ -1,1 +1,70 @@
-<p>detail works!</p>
+<table mat-table [dataSource]="dataSources" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- nmIdEmployee Column -->
+    <ng-container matColumnDef="nmIdEmployee">
+      <th mat-header-cell *matHeaderCellDef> <b>No.</b> </th>
+      <td mat-cell *matCellDef="let element"> {{element.nmIdEmployee}} </td>
+    </ng-container>
+  
+    <!-- dsDocument Column -->
+    <ng-container matColumnDef="dsDocument">
+      <th mat-header-cell *matHeaderCellDef><b>Document</b>  </th>
+      <td mat-cell *matCellDef="let element"> {{element.dsDocument}} </td>
+    </ng-container>
+  
+    <!-- dsDocumentType Column -->
+    <ng-container matColumnDef="dsDocumentType">
+      <th mat-header-cell *matHeaderCellDef> <b>Type</b> </th>
+      <td mat-cell *matCellDef="let element"> {{element.dsDocumentType}} </td>
+    </ng-container>
+  
+    <!-- dsName Column -->
+    <ng-container matColumnDef="dsName">
+      <th mat-header-cell *matHeaderCellDef><b>Name</b>  </th>
+      <td mat-cell *matCellDef="let element"> {{element.dsName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dsLastname">
+      <th mat-header-cell *matHeaderCellDef> <b>Lastname </b></th>
+      <td mat-cell *matCellDef="let element"> {{element.dsLastname}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dsPhoneNumber">
+      <th mat-header-cell *matHeaderCellDef> <b>Phone </b></th>
+      <td mat-cell *matCellDef="let element"> {{element.dsPhoneNumber}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dsAddress">
+      <th mat-header-cell *matHeaderCellDef> <b>Address</b> </th>
+      <td mat-cell *matCellDef="let element"> {{element.dsAddress}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="feHireDate">
+      <th mat-header-cell *matHeaderCellDef> <b>Hire Date</b> </th>
+      <td mat-cell *matCellDef="let element"> {{element.feHireDate}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="feDepartureDate">
+      <th mat-header-cell *matHeaderCellDef> <b>Departure Date </b></th>
+      <td mat-cell *matCellDef="let element"> {{element.feDepartureDate}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dsTypeOfContract">
+      <th mat-header-cell *matHeaderCellDef> <b>Type of Conract</b> </th>
+      <td mat-cell *matCellDef="let element"> {{element.dsTypeOfContract}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dsEmployeeStatus">
+        <th mat-header-cell *matHeaderCellDef> <b>Status</b> </th>
+        <td mat-cell *matCellDef="let element"> {{element.dsEmployeeStatus}} </td>
+      </ng-container>
+
+    
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+  </table>
