--- a/src/app/modules/employees/pages/list/list.component.html
+++ b/src/app/modules/employees/pages/list/list.component.html
@@ -5,28 +5,38 @@
   
     <!-- nmIdEmployee Column -->
     <ng-container matColumnDef="nmIdEmployee">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <th mat-header-cell *matHeaderCellDef> <b>No.</b> </th>
       <td mat-cell *matCellDef="let element"> {{element.nmIdEmployee}} </td>
     </ng-container>
   
     <!-- dsDocument Column -->
     <ng-container matColumnDef="dsDocument">
-      <th mat-header-cell *matHeaderCellDef> Document </th>
+      <th mat-header-cell *matHeaderCellDef><b>Document</b>  </th>
       <td mat-cell *matCellDef="let element"> {{element.dsDocument}} </td>
     </ng-container>
   
     <!-- dsDocumentType Column -->
     <ng-container matColumnDef="dsDocumentType">
-      <th mat-header-cell *matHeaderCellDef> Type </th>
+      <th mat-header-cell *matHeaderCellDef> <b>Type</b> </th>
       <td mat-cell *matCellDef="let element"> {{element.dsDocumentType}} </td>
     </ng-container>
   
     <!-- dsName Column -->
     <ng-container matColumnDef="dsName">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <th mat-header-cell *matHeaderCellDef><b>Name</b>  </th>
       <td mat-cell *matCellDef="let element"> {{element.dsName}} </td>
     </ng-container>
-  
+
+    <ng-container matColumnDef="dsLastname">
+      <th mat-header-cell *matHeaderCellDef> <b>Lastname </b></th>
+      <td mat-cell *matCellDef="let element"> {{element.dsLastname}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> <b>Employee Details</b> </th>
+      <button mat-cell *matCellDef="let element" (click)="redirectToDeteailEmployee(element.nmIdEmployee)">view details</button>
+    </ng-container>
+    
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   
